--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Naruto</title>
 	<link rel="shortcut icon" href="./img/icons/naruto.png" type="image/x-icon">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="./css/media.css">
 	<script src="libs/gsap/gsap.min.js" defer></script>
 	<script src="libs/gsap/ScrollTrigger.min.js" defer></script>
 	<script src="libs/gsap/ScrollSmoother.min.js" defer></script>
@@ -62,11 +63,11 @@
 						</div>
 						<div class="main-article-box_title">
 							<div class="main-article-box_title_block">
-								<div class="article_box-number">
+								<div class="article_box-number adaption_box-number">
 									<p>2022:</p>
 									<p>2022:</p>
 								</div>
-								<div class="box_title_block">
+								<div class="box_title_block ">
 									<h2>Опыт</h2>
 									<p>Namba - фриланс</p>
 									<a href="https://www.itcbootcamp.com">Помощник ментора (стажер) в ITC-bootcamp
@@ -78,7 +79,7 @@
 									<p>2019:</p>
 									<p>2022:</p>
 								</div>
-								<div class="box_title_block">
+								<div class="box_title_block adaption_box-title">
 									<h2>Участие </h2>
 									<a href="https://ticket.kg/event/itkonferenciya-devfest-2019-gdg-bishkek">
 										IT-конференция DevFest GDG</a>
