--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 									<a href="http://ru.krao.kg/">Кыргызско-Российская академия
 										образования - КРАО
 									</a>
+									<p>специальность:Программное обеспечение вычислительной техники</p>
+
 									<p> Самообразование , изучение : JavaScript,html,CSS</p>
 								</div>
 							</div>
