--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 					</div>
 					<div class="layer layers__base" style="background-image: url(img/layer-base.png);"></div>
 					<div class="layer layers__middle" style="background-image: url(img/layer-middle.png);"></div>
-					<div class="layer layers__front" style="background-image: url(img/layer-front.png);"></div>
+					<div class="layer layers__front" style="background-image: url(img/layer-front.png);">
+					</div>
 				</div>
 			</header>
 
@@ -108,7 +109,7 @@
 									<li>Universe.io,</li>
 									<li>Swiper,</li>
 									<li>Chakra UI,</li>
-									<li>Photoshop</li>
+									<li>Photoshop,</li>
 									<li>figma</li>
 								</ul>
 								<div class="scill_box-icons">
@@ -141,8 +142,15 @@
 			<footer class="contact-block">
 				<div class="container">
 					<div class="contact-block_general">
-						<div class="contact-block_address"></div>
-						<div class="contact-block_ava"></div>
+						<h2>Контакты</h2>
+						<div class="contact-block_address">
+							<p><img src="/img/icons_contact/phone.png" alt="">+996 552-14-10-02</p>
+							<a href="mailto:Crazy.Ms.777@gmail.com"><img src="/img/icons_contact/mail.png"
+									alt="">Почта//("crazy.ms.777@gmail.com")</a>
+							<a href="https://t.me/wi_l1a"><img src="/img/icons_contact/telegram.png" alt="">Telegram</a>
+							<a href="https://github.com/numinex777"><img src="/img/icons_contact/github.png"
+									alt="">GitHub</a>
+						</div>
 					</div>
 				</div>
 			</footer>
