--- a/index.html
+++ b/index.html
@@ -144,11 +144,12 @@
 					<div class="contact-block_general">
 						<h2>Контакты</h2>
 						<div class="contact-block_address">
-							<p><img src="/img/icons_contact/phone.png" alt="">+996 552-14-10-02</p>
-							<a href="mailto:Crazy.Ms.777@gmail.com"><img src="/img/icons_contact/mail.png"
+							<p><img src="./img/icons_contact/phone.png" alt="">+996 552-14-10-02</p>
+							<a href="mailto:Crazy.Ms.777@gmail.com"><img src="./img/icons_contact/mail.png"
 									alt="">Почта//("crazy.ms.777@gmail.com")</a>
-							<a href="https://t.me/wi_l1a"><img src="/img/icons_contact/telegram.png" alt="">Telegram</a>
-							<a href="https://github.com/numinex777"><img src="/img/icons_contact/github.png"
+							<a href="https://t.me/wi_l1a"><img src="./img/icons_contact/telegram.png"
+									alt="">Telegram</a>
+							<a href="https://github.com/numinex777"><img src="./img/icons_contact/github.png"
 									alt="">GitHub</a>
 						</div>
 					</div>
